# likeligrid

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  axis.py  data.R  exclusivity.Rmd  generate.R  genomatrix.R  infile.json  likelihood.R  limits.R  main.cpp  makebits.py  model.Rmd  pathways.Rmd  pereira.Rmd  recalc.R  results.R  run.py  shuffle.Rmd  uniaxis.R  uniaxis.Rmd
.github/workflows/: build.yaml
R/: common.R  data.R  generate.R  genomatrix.R  order_prob.R  pathways.Rmd  pereira.Rmd  recalc.R  results.R
mcmc/: mcmc.R  model.R  simplex.stan
src/: CMakeLists.txt  exact.cpp  exact.hpp  exclusivity.cpp  exclusivity.hpp  genotype.cpp  genotype.hpp  gradient_descent.cpp  gradient_descent.hpp  gridsearch.cpp  gridsearch.hpp  main.cpp  model.cpp  model.hpp  pathtype.cpp  pathtype.hpp  program.cpp  program.hpp  simplex.cpp  simplex.hpp  typedef.hpp  util.hpp  version.cpp.in  version.hpp  version.hpp.in
test/: CMakeLists.txt  genotype.cpp  gradient_descent.cpp  gridsearch.cpp  pathtype.cpp
