aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} source_files)
foreach(src IN LISTS source_files)
  cmake_path(GET src STEM name_we)
  add_executable(test-${name_we} ${src})
  target_link_libraries(test-${name_we} PRIVATE ${PROJECT_NAME})
  set_target_properties(test-${name_we} PROPERTIES CXX_EXTENSIONS OFF)
  add_test(NAME ${name_we} COMMAND $<TARGET_FILE:test-${name_we}>)
endforeach()
